--- a/templates/challenges/base.html
+++ b/templates/challenges/base.html
@@ -1,8 +1,13 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% block static_file %}
+    {% endblock %}
 </head>
 <body>
     {% block content %}
